# Dilemma

./: CMakeLists.txt  README.md  complex_strategies.cpp  complex_strategies.h  console_interface.cpp  console_interface.h  factory.cpp  factory.h  game.cpp  game.h  game_runner.cpp  game_runner.h  main.cpp  matrix.cpp  matrix.h  simple_strategies.cpp  simple_strategies.h  strategy.h
